--- a/app/src/main/res/layout/inscription_screen.xml
+++ b/app/src/main/res/layout/inscription_screen.xml
@@ -193,9 +193,29 @@
             <LinearLayout
                 android:id="@+id/Etape3"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/imgViewSucces"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center_horizontal"
+                    android:visibility="gone"
+                    app:srcCompat="@drawable/ic_check" />
+
+                <TextView
+                    android:id="@+id/txtViewSucces"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="Votre compte a été créer avec succès !"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/txtQr1"
@@ -204,7 +224,8 @@
                     android:gravity="center"
                     android:text="Scanner le code QR"
                     android:textColor="@color/black"
-                    android:textSize="25sp" />
+                    android:textSize="25sp"
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/txtQr2"
@@ -213,13 +234,15 @@
                     android:gravity="center"
                     android:text="@string/associer_l_appareil_l_aide_d_un_code_qr"
                     android:textColor="@color/black"
-                    android:textSize="17sp" />
+                    android:textSize="17sp"
+                    android:visibility="visible" />
 
                 <com.budiyev.android.codescanner.CodeScannerView
                     android:id="@+id/scanner_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
+                    android:visibility="visible"
                     app:autoFocusButtonColor="@color/white"
                     app:autoFocusButtonVisible="true"
                     app:flashButtonColor="@color/white"
