Implémentation de la méthode d'inscription

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
 
     <!--IndexEye Colors-->
     <color name="mainColor">#FF041D28</color>
+    <color name="secondColor">#FF1497CF</color>
     <color name="white">#FFFFFFFF</color>
+
 
 </resources>
