--- a/app/src/main/res/layout/connexion_screen.xml
+++ b/app/src/main/res/layout/connexion_screen.xml
@@ -18,25 +18,44 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="240dp"
+            android:layout_height="230dp"
             android:background="@color/mainColor">
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/indexeye"
-                android:textColor="@color/white"
-                android:textSize="30sp"
-                android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/indexeye" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/indexeye"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
         </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="30dp">
+            android:paddingTop="20dp"
+            android:paddingBottom="15dp"
+            android:paddingEnd="30dp"
+            android:paddingStart="30dp">
 
             <TextView
                 android:id="@+id/textView"
@@ -54,7 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="20dp"
                 android:hint="@string/e_mail"
                 app:endIconDrawable="@drawable/ic_mail"
                 app:endIconMode="custom"
@@ -78,7 +97,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_marginTop="18dp"
+                android:layout_marginTop="10dp"
                 android:hint="@string/mot_de_passe"
                 app:endIconMode="password_toggle"
                 app:errorEnabled="true"
@@ -95,12 +114,22 @@
                     android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <TextView
+                android:id="@+id/txtViewPassWrdForgeted"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="Mot de passe oublier ?"
+                android:textStyle="bold"
+                android:textColor="@color/mainColor"
+                android:textSize="14sp"/>
+
             <Button
                 android:id="@+id/AccessAccount"
                 android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="18dp"
                 android:background="@drawable/button_shape"
                 android:elevation="20dp"
                 android:padding="15dp"
@@ -113,7 +142,7 @@
                 android:id="@+id/linearLayout3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -155,10 +184,10 @@
                 android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 android:background="@drawable/outlined_button_shape"
                 android:elevation="20dp"
-                android:padding="15dp"
+                android:padding="20dp"
                 android:text="@string/inscrivez_vous"
                 android:textAllCaps="false"
                 android:textColor="@color/mainColor"
