--- a/app/src/main/res/layout/fragment_inscription.xml
+++ b/app/src/main/res/layout/fragment_inscription.xml
@@ -249,7 +249,15 @@
                 android:layout_height="200dp"
                 android:layout_gravity="center_horizontal"
                 android:visibility="visible"
-                app:srcCompat="@drawable/code_bar" />
+                app:srcCompat="@drawable/code_bar"/>
+
+            <ImageView
+                android:id="@+id/imgViewPlumber"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center_horizontal"
+                android:visibility="visible"
+                app:srcCompat="@drawable/plumber"/>
 
             <ImageView
                 android:id="@+id/imgViewSucces"
@@ -322,6 +330,35 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:visibility="visible" />
+
+            <Button
+                android:id="@+id/btnScan"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/button_shape"
+                android:elevation="40dp"
+                android:padding="15dp"
+                android:text="Lancer le scan"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/btnPlumberInscription"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/button_shape"
+                android:elevation="40dp"
+                android:padding="15dp"
+                android:text="Valider"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:visibility="gone" />
+
         </LinearLayout>
 
         <TextView
