--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -17,7 +17,7 @@
         tools:layout="@layout/fragment_user_profil" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.astdev.indexeye.homeFragment"
+        android:name="com.astdev.indexeye.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 </navigation>
