--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,7 @@
             android:textSize="21sp"
             android:textStyle="bold" />
 
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewConso"
             android:layout_width="match_parent"
@@ -32,33 +33,6 @@
             android:layout_marginBottom="10dp"
             app:cardCornerRadius="15dp">
 
-            <me.tankery.lib.circularseekbar.CircularSeekBar
-                android:id="@+id/consoBar"
-                android:layout_width="match_parent"
-                android:layout_height="98dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:rotation="130"
-                app:cs_circle_color="#E5E5E5"
-                app:cs_circle_progress_color="#5ccff9"
-                app:cs_circle_stroke_width="10dp"
-                app:cs_circle_style="round"
-                app:cs_circle_x_radius="0dp"
-                app:cs_circle_y_radius="0dp"
-                app:cs_disable_pointer="false"
-                app:cs_disable_progress_glow="true"
-                app:cs_hide_progress_when_empty="true"
-                app:cs_lock_enabled="true"
-                app:cs_maintain_equal_circle="true"
-                app:cs_max="500"
-                app:cs_move_outside_circle="true"
-                app:cs_negative_enabled="false"
-                app:cs_pointer_alpha_ontouch="5"
-                app:cs_pointer_stroke_width="5dp"
-                app:cs_progress="0"
-                app:cs_start_angle="370"
-                app:cs_use_custom_radii="false" />
-
             <TextView
                 android:id="@+id/text"
                 android:layout_width="wrap_content"
@@ -67,16 +41,67 @@
                 android:text="Consommation d'aujourd'hui"
                 android:textColor="#000000" />
 
-            <TextView
-                android:id="@+id/txtViewConso"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="6dp"
-                android:text=""
-                android:textColor="#000000"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp">
+
+                    <me.tankery.lib.circularseekbar.CircularSeekBar
+                        android:id="@+id/consoBar"
+                        android:layout_width="match_parent"
+                        android:layout_height="98dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:rotation="130"
+                        app:cs_circle_color="#E5E5E5"
+                        app:cs_circle_progress_color="#5ccff9"
+                        app:cs_circle_stroke_width="10dp"
+                        app:cs_circle_style="round"
+                        app:cs_circle_x_radius="0dp"
+                        app:cs_circle_y_radius="0dp"
+                        app:cs_disable_pointer="false"
+                        app:cs_disable_progress_glow="true"
+                        app:cs_hide_progress_when_empty="true"
+                        app:cs_lock_enabled="true"
+                        app:cs_maintain_equal_circle="true"
+                        app:cs_max="500"
+                        app:cs_move_outside_circle="true"
+                        app:cs_negative_enabled="false"
+                        app:cs_pointer_alpha_ontouch="5"
+                        app:cs_pointer_stroke_width="5dp"
+                        app:cs_progress="0"
+                        app:cs_start_angle="370"
+                        app:cs_use_custom_radii="false" />
+
+                    <TextView
+                        android:id="@+id/txtViewConso"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="6dp"
+                        android:text="8m³"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="20dp"
+                    android:text="8m³ = 8000litres"/>
+
+            </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
@@ -99,7 +124,7 @@
                     android:id="@+id/spinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="4dp"
                     android:minHeight="48dp"
                     android:spinnerMode="dropdown"
                     tools:ignore="SpeakableTextPresentCheck" />
@@ -109,7 +134,7 @@
                     android:layout_width="300dp"
                     android:layout_height="300dp"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_marginBottom="20dp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
