--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
-        android:title="Acueil"/>
+        android:title="Accueil"/>
 
     <item
         android:id="@+id/userProfilFragment"
