Modif page des services

--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -18,7 +18,8 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="230dp"
-            android:background="@color/mainColor">
+
+            android:background="@drawable/entete">
 
             <LinearLayout
                 android:layout_width="match_parent"
