--- a/app/src/main/res/layout/fragment_user_profil.xml
+++ b/app/src/main/res/layout/fragment_user_profil.xml
@@ -18,16 +18,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
 
-
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="30dp"
             app:cardCornerRadius="15dp"
-            app:cardElevation="6dp">
+            app:cardElevation="1dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -58,16 +57,15 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-
         <androidx.cardview.widget.CardView
             android:id="@+id/cvInfoTel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="8dp"
             app:cardCornerRadius="15dp"
-            app:cardElevation="3dp">
+            app:cardElevation="0.5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -106,9 +104,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="8dp"
             app:cardCornerRadius="15dp"
-            app:cardElevation="3dp">
+            app:cardElevation="0.5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -140,16 +138,15 @@
 
         </androidx.cardview.widget.CardView>
 
-
         <androidx.cardview.widget.CardView
             android:id="@+id/cvInfoPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="8dp"
             app:cardCornerRadius="15dp"
-            app:cardElevation="3dp">
+            app:cardElevation="0.5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -173,7 +170,7 @@
                     android:layout_marginStart="30dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="10dp"
-                    android:text=""
+                    android:text="*********"
                     android:textColor="#000000"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -182,16 +179,15 @@
 
         </androidx.cardview.widget.CardView>
 
-
         <androidx.cardview.widget.CardView
             android:id="@+id/cvInfoDeviceId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="8dp"
             app:cardCornerRadius="15dp"
-            app:cardElevation="3dp">
+            app:cardElevation="0.5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -224,8 +220,16 @@
 
         </androidx.cardview.widget.CardView>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:layout_gravity="end"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="30dp"
+            android:src="@drawable/ic_edit" />
+
     </LinearLayout>
-
-
 
 </FrameLayout>
