--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
 
-    <!--IndexEye Colors-->
-    <color name="mainColor">#FF041D28</color>
+    <!--IndexEye Colors #FF041D28-->
+    <color name="mainColor">#FF1497CF</color>
     <color name="secondColor">#FF1497CF</color>
     <color name="white">#FFFFFFFF</color>
 
