--- a/app/src/main/res/layout/fragment_connexion.xml
+++ b/app/src/main/res/layout/fragment_connexion.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ConnexionFragment">
+    tools:context=".fragments.ConnexionFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -146,7 +146,7 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/outlined_button_shape"
             android:elevation="20dp"
-            android:padding="20dp"
+            android:padding="15dp"
             android:text="@string/inscrivez_vous"
             android:textAllCaps="false"
             android:textColor="@color/mainColor"
