--- a/app/src/main/res/layout/fragment_user_profil.xml
+++ b/app/src/main/res/layout/fragment_user_profil.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:background="@color/mainColor"
     android:layout_height="match_parent"
-    tools:context=".UserProfilFragment">
+    tools:context=".fragments.UserProfilFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
