--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/servicesFragment"
-        android:name="com.astdev.indexeye.ServicesFragment"
+        android:name="com.astdev.indexeye.fragments.ServicesFragment"
         android:label="fragment_services"
         tools:layout="@layout/fragment_services" />
     <fragment
         android:id="@+id/userProfilFragment"
-        android:name="com.astdev.indexeye.UserProfilFragment"
+        android:name="com.astdev.indexeye.fragments.UserProfilFragment"
         android:label="fragment_user_profil"
         tools:layout="@layout/fragment_user_profil" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.astdev.indexeye.HomeFragment"
+        android:name="com.astdev.indexeye.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 </navigation>
