--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="30dp"
             android:layout_marginEnd="15dp"
             app:cardElevation="4dp">
@@ -29,7 +29,7 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="190dp"
+                    android:layout_height="wrap_content"
                     android:scaleType="centerCrop"
                     android:src="@drawable/images" />
 
@@ -55,7 +55,8 @@
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="UselessParent">
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="0dp"
@@ -77,25 +78,18 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/img_fuite" />
 
-                    <LinearLayout
+                    <Button
+                        android:id="@+id/btnConterPlombier"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="8dp">
+                        android:layout_gravity="center"
+                        android:backgroundTint="@color/mainColor"
+                        android:text="Signaler une fuite"
+                        android:layout_margin="10dp"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        tools:ignore="TextContrastCheck" />
 
-                        <Button
-                            android:id="@+id/btnConterPlombier"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:backgroundTint="@color/mainColor"
-                            android:text="Signaler une fuite"
-                            android:textAllCaps="false"
-                            android:textColor="@color/white"
-                            tools:ignore="TextContrastCheck" />
-
-
-                    </LinearLayout>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
@@ -118,24 +112,18 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/service_plumber" />
 
-                    <LinearLayout
+                    <Button
+                        android:id="@+id/btnConterVidangeur"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="8dp">
+                        android:layout_gravity="center"
+                        android:backgroundTint="@color/mainColor"
+                        android:text="Contacter un plombier"
+                        android:textAllCaps="false"
+                        android:layout_margin="10dp"
+                        android:textColor="@color/white"
+                        tools:ignore="TextContrastCheck" />
 
-                        <Button
-                            android:id="@+id/btnConterVidangeur"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:backgroundTint="@color/mainColor"
-                            android:text="Trouver un plombier"
-                            android:textAllCaps="false"
-                            android:textColor="@color/white"
-                            tools:ignore="TextContrastCheck" />
-
-                    </LinearLayout>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
