--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/servicesFragment"
         android:name="com.astdev.indexeye.fragments.ServicesFragment"
         android:label="fragment_services"
-        tools:layout="@layout/fragment_services" />
+        tools:layout="@layout/fragment_services" >
+        <action
+            android:id="@+id/action_servicesFragment_to_listPlumberFragment"
+            app:destination="@id/listPlumberFragment" />
+    </fragment>
     <fragment
         android:id="@+id/userProfilFragment"
         android:name="com.astdev.indexeye.fragments.UserProfilFragment"
@@ -21,8 +25,9 @@
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
-        android:id="@+id/plumberProfil"
-        android:name="com.astdev.indexeye.PlumberProfil"
-        android:label="fragment_plumber_profil"
-        tools:layout="@layout/fragment_plumber_profil" />
+        android:id="@+id/listPlumberFragment"
+        android:name="com.astdev.indexeye.ListPlumberFragment"
+        android:label="fragment_list_plumber"
+        tools:layout="@layout/fragment_list_plumber" />
+
 </navigation>
