--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -49,7 +49,7 @@
 
         </FrameLayout>
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/nav_1"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
